src/scss/components/_footer.scss
.footer {
  &__container {
    padding: 60px 0 42px 0;
    display: flex;
    justify-content: space-between;
    margin-left: auto;
  }
  &_folow {
    max-height: 158px;
    max-width: 432px;
    width: 100%;
    margin-right: 30px;

    &--title {
      font-size: 20px;
      text-transform: uppercase;
      margin-bottom: 52px;
    }
    &_icons {
      display: flex;
      justify-content: space-between;
    }
  }
  &_form {
    max-height: 158px;
    display: flex;
    flex-direction: column;
    min-width: 292px;
    &--title {
      font-size: 20px;
      text-transform: uppercase;
      margin-bottom: 20px;
    }
    &_lable {
      margin-bottom: 17px;
      position: relative;
      z-index: 1;

      &:nth-child(3) {
        margin-bottom: 21px;
      }
      input {
        border-radius: 0px;
        width: 100%;
        border: none;
        border-bottom: 1px solid $mainColor;
        padding-bottom: 12px;
        text-transform: uppercase;
        font-size: 16px;
        font-weight: 300;

        &::placeholder {
          color: $placeholderColor;
        }
        &:focus {
          outline: none;
        }
      }
      button {
        position: absolute;
        display: block;
        top: 0;
        right: 0;
        text-transform: uppercase;
        font-size: 16px;
        font-weight: 700;
        cursor: pointer;
        border: none;
        background-color: transparent;
        color: $mainColor;
      }
    }
    &_copyright {
      font-weight: 300;
      font-size: 14px;
      text-transform: uppercase;
    }
  }
}

@media screen and (max-width: 1000px) {
  .footer {
    padding-right: 0;
  }
}

@media screen and (max-width: 836px) {
  .footer {
    &_folow {
      max-width: 136px;
      &_icons {
        flex-wrap: wrap;
        a {
          margin-right: 13px;
          &:nth-child(1) {
            margin-bottom: 40px;
          }
        }
      }
    }
  }
}

@media screen and (max-width: 768px) {
  .footer {
    padding: 44px 20px;
    &__container {
      padding: 0;
    }
    &_form {
      width: 292px;
      margin-right: 0;
      &--title {
        font-size: 18px;
      }
    }
    &_folow {
      width: 100%;
      max-width: 292px;
      margin-right: 0;
      &_icons {
        justify-content: space-between;
        padding-right: 20px;
        a {
          margin-right: 0;
          &:nth-child(1) {
            margin-bottom: 0;
          }
        }
      }
    }
    &--title {
      font-size: 18px;
    }
  }
}

@media screen and (max-width: 600px) {
  .footer {
    padding: 40px 20px;
    &__container {
      flex-direction: column-reverse;
    }
    &_folow {
      min-width: 100%;
      margin-top: 40px;
    }
    &_form {
      // min-width: 332px;
      width: 100%;
    }
  }
}
@media screen and (max-width: 375px) {
  .footer {
    padding: 40px 20px;
    &_folow,
    &_form {
      &--title {
        font-size: 16px;
      }
    }
    &_form {
      &_lable {
        input {
          font-size: 16px;
        }
      }
    }
  }
}

